--- a/app/src/main/res/layout/activity_voice_recorder.xml
+++ b/app/src/main/res/layout/activity_voice_recorder.xml
@@ -1,15 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <EditText
-        android:layout_width="200dp"
-        android:layout_height="wrap_content" />
-    <Button
+        android:id="@+id/alarm_title"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="50dp"
+        android:hint="@string/recording_name"
+        />
+    <TextView
+        android:id="@+id/timeLength"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="play/pause"
-        android:background="@android:color/holo_green_dark"
+        android:layout_below="@+id/alarm_title"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="20dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:text="0.0"/>
+
+    <Button
+        android:id="@+id/record"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/record"
+        android:background="@color/recordGreen"
+        android:layout_below="@+id/timeLength"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+         />
+    <Button
+        android:id="@+id/playBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/play"
+        android:background="@color/recordGreen"
+        android:layout_below="@+id/record"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
         />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
