--- a/app/src/main/res/layout/activity_voice_recorder.xml
+++ b/app/src/main/res/layout/activity_voice_recorder.xml
@@ -87,12 +87,13 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_below="@+id/time_selected"
+        android:id="@+id/days_selected"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingLeft="20dp"
         android:layout_marginTop="40dp"
+        android:layout_below="@+id/time_selected"
         android:gravity="center">
         <CheckBox
             android:layout_width="wrap_content"
@@ -122,6 +123,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Sunday"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="40dp"
+        android:gravity="center">
+        <Button
+            android:id="@+id/button_save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="30dp"
+            android:text="Save"/>
+        <Button
+            android:id="@+id/button_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cancel"/>
+
 
     </LinearLayout>
 
