IN AlarmDBHelper I split the database entry time to hours and minute. Changed DaysOfWeek from INTEGER to TEXT. In alarmClock.java I adjusted the values of the mediaRecorder() method to record higher quality audio.

--- a/app/src/main/res/layout/activity_voice_recorder.xml
+++ b/app/src/main/res/layout/activity_voice_recorder.xml
@@ -75,12 +75,18 @@
             android:text="02"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=":"
+            android:textSize="30sp"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
+        <TextView
             android:id="@+id/tv_minutes"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:gravity="left"
             android:layout_height="wrap_content"
-            android:text=":30"
+            android:text="30"
             android:textSize="30sp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
 
