--- a/app/src/main/res/layout/activity_alarm_clock.xml
+++ b/app/src/main/res/layout/activity_alarm_clock.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.h.chad.alexaalarmclock.AlarmClock">
+    tools:context="com.h.chad.alexaalarmclock.AlarmClockActivity">
     <ListView
         android:id="@+id/alarm_list"
         android:layout_width="match_parent"
@@ -17,6 +17,7 @@
         android:layout_centerInParent="true">
 
         <TextView
+            android:id="@+id/empty_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="25dp"
