--- a/app/src/main/res/layout/alarm_list_item.xml
+++ b/app/src/main/res/layout/alarm_list_item.xml
@@ -12,7 +12,8 @@
         android:id="@+id/checkbox_on_off"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="10dp"/>
+        android:layout_marginRight="10dp"
+        android:gravity="left"/>
     <TextView
         android:id="@+id/textview_user_description"
         android:layout_width="wrap_content"
