--- a/app/src/main/res/layout/alarm_list_item.xml
+++ b/app/src/main/res/layout/alarm_list_item.xml
@@ -111,5 +111,10 @@
         android:layout_marginEnd="10dp"
         android:paddingTop="10dp"
         android:src="@drawable/test_audio" />
+    <TextView
+        android:id="@+id/tv_gone_alarmID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
 
 </RelativeLayout>
